k8s/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: REPLACE_ME
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: REPLACE_ME
  namespace: REPLACE_ME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: REPLACE_ME
  template:
    metadata:
      labels:
        app: REPLACE_ME
    spec:
      serviceAccountName: image-puller
      imagePullSecrets:
        - name: regcred
      containers:
        - name: REPLACE_ME
          imagePullPolicy: Always
          image: registry.w1png.ru/repo_url
          ports:
            - name: http
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: REPLACE_ME
  namespace: REPLACE_ME
spec:
  type: ClusterIP
  selector:
    app: REPLACE_ME
  ports:
    - name: http
      port: 3000
      targetPort: 3000
